Convert project over to using poetry
This also adds the basic testing tools in, as well as formats everything using Black

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
-.Python
-bin
-build
+scratch
 dist
-include
-lib
+.eggs
+__pycache__
+.pyc
+.swp
+.mypy_cache
+.coverage
 *.egg-info
-*.pyc
-pip-selfcheck.json
-MANIFEST
-Scripts
-tcl
-.vscode
+schemas
