--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^3.4"
 pytest-black = "^0.3.2"
 pytest-mypy = "^0.3.2"
 pytest-cov = "^2.6"
+pytest-datafiles = "^2.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
