--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,5 @@ pytest-cov = "^2.6"
 pytest-datafiles = "^2.0"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
